# TODO-manager

./: .gitignore  CLAUDE.md
backend/: .env.example  .pylintrc  README.md  manual_test_us1.py  manual_test_us2.py  manual_test_us3.py  manual_test_us4.py  manual_test_us5.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ae3a6545a1d9_create_tasks_table.py
backend/api/: __init__.py  index.py
backend/src/: config.py  database.py  main.py
backend/src/api/: dependencies.py  middleware.py
backend/src/api/routes/: tasks.py
backend/src/auth/: jwt_handler.py
backend/src/cli/: menu.py
backend/src/mcp/: __init__.py  __main__.py  errors.py  http_server.py  schemas.py  server.py
backend/src/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/src/migrations/: __init__.py  add_task_extensions.py  create_conversations.py  create_messages.py
backend/src/models/: __init__.py  conversation.py  enums.py  message.py  schemas.py  task.py
backend/src/services/: __init__.py  context_service.py  conversation_service.py  message_service.py  task_manager.py  task_service.py
backend/tests/: TEST_PHASE4_SUMMARY.md  conftest.py
backend/tests/contract/: test_jwt_validation.py  test_openapi.py
backend/tests/integration/: __init__.py  test_api_tasks.py  test_api_tasks_with_auth.py  test_cli_flow.py  test_context_reconstruction.py  test_conversation_lifecycle.py  test_mcp_server.py  test_service_isolation.py  test_task_extended_crud.py  test_user_isolation.py
backend/tests/unit/: test_conversation_model.py  test_enums.py  test_jwt_handler.py  test_message_model.py  test_message_task_link.py  test_schemas.py  test_task.py  test_task_manager.py  test_task_model_extended.py
backend/tests/unit/mcp/: __init__.py  test_add_task.py  test_complete_task.py  test_delete_task.py  test_list_tasks.py  test_update_task.py
chatbot/: .env.example  README.md  __init__.py  (+2 more)
(+227 files in other folders)
